Add link compilation

--- a/public/404.html
+++ b/public/404.html
@@ -125,6 +125,11 @@
                     <span>検索</span>
                 </a>
             </li>
+            <li>
+                <a href="https://ta729ip.dev/link/" title="リンク集">
+                    <span>リンク集</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
