--- a/public/search/index.html
+++ b/public/search/index.html
@@ -176,6 +176,11 @@
                     <span class="active">検索</span>
                 </a>
             </li>
+            <li>
+                <a href="https://ta729ip.dev/link/" title="リンク集">
+                    <span>リンク集</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
